--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,37 @@
-name: Android CI
-
+name: Android Package
+ 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
-
+    branches: [ master ]
+ 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+ 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v2
+ 
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+        java-version: 1.8
+ 
+    - name: Set up Android SDK
+      uses: android-actions/sdk-manager@v1
+      with:
+        permissions: write
+ 
+    - name: Set up Gradle
+      uses: gradle/wrapper-action@v1
+ 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew assembleRelease
+ 
+    - name: Upload APK to GitHub Release
+      uses: actions/upload-artifact@v1
+      if: success()
+      with:
+        name: apk
+        path: app/build/outputs/apk/release/app-release.apk
