--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,11 +25,21 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleRelease
       
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4.3.3
+    # - name: Upload a Build Artifact
+    #   uses: actions/upload-artifact@v4.3.3
+    #   with:
+    #       name: ljjy-apk
+    #       path: |
+    #         ${{github.workspace}}/app/build/outputs/apk/tencent/release/*.apk
+    #         ${{github.workspace}}/app/build/outputs/apk/xiaomi/release/*.apk
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-          name: ljjy-apk
-          path: |
-            ${{github.workspace}}/app/build/outputs/apk/tencent/release/*.apk
-            ${{github.workspace}}/app/build/outputs/apk/xiaomi/release/*.apk
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./${{ secrets.ReleaseZipName }}.apk
+        asset_name: ${{ secrets.ReleaseZipName }}.apk
+        asset_content_type: application/apk
           
