--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,13 +33,18 @@ jobs:
     #         ${{github.workspace}}/app/build/outputs/apk/tencent/release/*.apk
     #         ${{github.workspace}}/app/build/outputs/apk/xiaomi/release/*.apk
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ secrets.ReleaseZipName }}.apk
-        asset_name: ${{ secrets.ReleaseZipName }}.apk
-        asset_content_type: application/apk
+   - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
           
